tests/invalid_ast_samples/8e31e112e57521da11f8c8fc22d6793c7eaba0da4093e272de02fe22de9d83c4.py
from ast import Expr
from ast import Module
from ast import Slice

tree = Module(body=[Expr(value=Slice())], type_ignores=[])

# version: 3.12.0
#
# Source:
# :
#
#
# Error:
#     SyntaxError('invalid syntax', ('<file>', 1, 1, ':\n', 1, 2))
